fixed bee alignment on home page

--- a/invenio/b2share/modules/main/static/css/b2s-common.css
+++ b/invenio/b2share/modules/main/static/css/b2s-common.css
@@ -115,8 +115,8 @@ legend [class*="icon-"] {
 }
 
 .websearch .title img {
-    height: 200px;
-    margin: -76px 0;
+    height: 150px;
+    margin: -24px 0 -60px;
 }
 
 .collection ul.nav-list {
